--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
+pillow==11.1.0
+rawpy==0.24.0
+numpy==2.2.3
+imageio==2.37.0
+pillow-heif==0.22.0
+opencv-python==4.11.0.86
+imageio-ffmpeg==0.6.0
+matplotlib==3.10.1
+biplist==1.0.3
 tk
-pillow
-rawpy
-numpy
-imageio
-pillow-heif
-opencv-python
-imageio-ffmpeg
-matplotlib
 pycrypto
-biplist
