--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ pycryptodome==3.22.0
 iphone_backup_decrypt==0.9.0
 fastpbkdf2==0.2
 pandas==2.2.3
-pillow-heif==0.22.0
 pyicloud==1.0.0
 tqdm==4.67.1
 PyMuPDF==1.26.0
 python-docx==1.1.2
 python-pptx==1.0.2
 Spire.Presentation==10.1.0
+openpyxl==3.1.5
+pdf2image==1.17.0
+pywin32==310
